Remove Delphi from language list (to avoid support on this language)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2>Portable</h2>
           <p>LibLogicalAccess is designed for portability. The library works well on both <strong>Linux</strong> and <strong>Windows</strong>, as well as <strong>Mac OSX</strong>.
             The codebase also build and works on both <strong>x86</strong>/<strong>amd64</strong> and <strong>arm</strong>.<br />
-			On Windows, you can purchase the appropriate component to develop directly using your favorite development language (<a href="https://github.com/islog/liblogicalaccess/wiki/Use-this-RFID-library-in-DotNet-%28C%23%29">C# .NET</a>, <a href="https://github.com/islog/liblogicalaccess/wiki/Use-this-RFID-library-in-Delphi">Delphi</a> ...).
+			On Windows, you can purchase the appropriate component to develop directly using your favorite development language (<a href="https://github.com/islog/liblogicalaccess/wiki/Use-this-RFID-library-in-DotNet-%28C%23%29">C# .NET</a> ...).
           </p>
 		</div>
         <div class="col-md-6">
@@ -68,8 +68,7 @@
           <p>The Starter Kit is the need-to-have for whoever interested in RFID development. It contains several hardware, software and source code to start correctly your project.
 		  <ul>
 			<li>Omnikey 5021 reader</li>
-			<li>Several card technology</li>
-			<li>(2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
+			<li>Several card technology (2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
 			<li>USB Key with: releases, C++ samples (including Visual Studio and Qt samples) and ReadCard software community edition</li>
 		  </ul>
 		  </p>
@@ -80,8 +79,7 @@
           <p>The .NET Starter Kit is the need-to-have for whoever interested in RFID development on .NET environment. It contains several hardware, software, .NET library license for your company and GUI controls to start correctly your DotNet project.</p>
 		  <ul>
 			<li>Omnikey 5021 reader</li>
-			<li>Several card technology</li>
-			<li>(2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
+			<li>Several card technology (2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
 			<li>.NET library license use for your company</li>
 			<li>USB Key with: releases, .NET GUI library, C++/C# samples (including Visual Studio and Qt samples) and ReadCard software full edition</li>
 		  </ul>
