--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="jumbotron">
       <div class="container">
         <img style="width:450px;margin-left:-30px" src="images/lla_logo.png" />
-        <p>A portable, open source RFID library.</p>
+        <p>A portable, open source RFID/NFC library.</p>
         <p>
 		  <a class="btn btn-primary btn-lg" role="button" href="https://github.com/islog/liblogicalaccess/wiki">Learn more &raquo;</a>
 		  <a class="btn btn-success btn-lg" role="button" href="https://github.com/islog/liblogicalaccess/releases/latest">Download</a>
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2>Portable</h2>
-          <p>LibLogicalAccess is designed for portability. The library works well on both <strong>Linux</strong> and <strong>Windows</strong>, as well as <strong>Mac OSX</strong>.
+          <p>LibLogicalAccess is designed for portability. The library works well on both <strong>Linux</strong> and <strong>Windows</strong>, as well as <strong>Mac OSX</strong> and <strong>Android</strong>.
             The codebase also build and works on both <strong>x86</strong>/<strong>amd64</strong> and <strong>arm</strong>.<br />
 			On Windows, you can purchase the appropriate component to develop directly using your favorite development language (<a href="https://github.com/islog/liblogicalaccess/wiki/Use-this-RFID-library-in-DotNet-%28C%23%29">C# .NET</a> ...).
           </p>
@@ -55,7 +55,7 @@
         <div class="col-md-6">
           <h2>Good hardware support</h2>
           <p>LibLogicalAccess architecture is modules based. This allows it to support various card readers and RFID chips in a flexible way.</p>
-		  <p>In short, it works with most PC/SC, NFC and proprietary-based protocol readers for main RFID chips on the market (Mifare Classic, Mifare Plus, Mifare DESFire EV1, Mifare Ultralight C, HID iClass, HID Prox, Sony FeliCa ...).</p>
+		  <p>In short, it works with most PC/SC, NFC and proprietary-based protocol readers for main RFID chips on the market (Mifare Classic, Mifare Plus, Mifare DESFire EV1 / EV2, Mifare Ultralight C, HID iClass, HID Prox, Seos, Sony FeliCa ...).</p>
           <p><a class="btn btn-default" href="https://github.com/islog/liblogicalaccess/wiki/Supported-hardware" role="button">View details &raquo;</a></p>
         </div>
       </div>
