Change Omnikey reader reference on Starter Kits

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2>Starter Kit</h2>
           <p>The Starter Kit is the need-to-have for whoever interested in RFID development. It contains several hardware, software and source code to start correctly your project.
 		  <ul>
-			<li>Omnikey 5021 reader</li>
+			<li>HID Omnikey 5023 reader</li>
 			<li>Several card technology (2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
 			<li>USB Key with: releases, C++ samples (including Visual Studio and Qt samples) and ReadCard software community edition</li>
 		  </ul>
@@ -78,7 +78,7 @@
           <h2>.NET Starter Kit</h2>
           <p>The .NET Starter Kit is the need-to-have for whoever interested in RFID development on .NET environment. It contains several hardware, software, .NET library license for your company and GUI controls to start correctly your DotNet project.</p>
 		  <ul>
-			<li>Omnikey 5021 reader</li>
+			<li>HID Omnikey 5023 reader</li>
 			<li>Several card technology (2x Mifare Classic, 2x Mifare DESFire EV1, 2x HID iClass)</li>
 			<li>.NET library license use for your company</li>
 			<li>USB Key with: releases, .NET GUI library, C++/C# samples (including Visual Studio and Qt samples) and ReadCard software full edition</li>
